--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.0.19",
+    "@aws-amplify/ui-react": "^6.1.5",
     "aws-amplify": "latest",
     "next": "13.5.4",
     "react": "^18",
